// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform record, old + new format, eligible 1`] = `
Object {
  "caseNotes": Object {},
  "clientFirstName": "LINDA",
  "clientLastName": "SMITH",
  "courtCostsPaid": false,
  "currentOffenses": Array [
    "FAILURE TO APPEAR (FELONY)",
  ],
  "dateToday": "2022-03-25",
  "drugScreensPastYear": Array [],
  "eligibilityCategory": "c3",
  "eligibleCriteria": Object {
    "usTnFinesFeesEligible": Object {
      "hasFinesFeesBalanceBelow500": Object {
        "amountOwed": 400,
      },
      "hasPayments3ConsecutiveMonths": Object {
        "amountOwed": 400,
        "consecutiveMonthlyPayments": null,
      },
    },
  },
  "eligibleLevelStart": undefined,
  "externalId": "202",
  "formInformation": Object {
    "sentenceStartDate": 2020-03-07T00:00:00.000Z,
  },
  "ineligibleCriteria": Object {},
  "judicialDistrict": "Unknown",
  "lastSpecialConditionsNote": undefined,
  "lifetimeOffensesExpired": Array [],
  "metadata": Object {
    "allOffenses": Array [
      "FAILURE TO APPEAR (FELONY)",
      "EVADING ARREST",
    ],
    "convictionCounties": Array [
      "123ABC",
    ],
    "ineligibleOffensesExpired": Array [],
    "mostRecentArrestCheck": Object {
      "contactDate": "2023-04-01",
      "contactType": "ARRN",
    },
    "mostRecentSpeNote": Object {
      "contactDate": "2019-08-15",
      "contactType": "SPET",
    },
    "specialConditionsTerminatedDate": "2019-08-15",
  },
  "mostRecentArrestCheck": 2023-04-01T00:00:00.000Z,
  "nextSpecialConditionsCheck": undefined,
  "offenseTypeEligibility": undefined,
  "pastOffenses": undefined,
  "poFirstName": "TEST",
  "poLastName": "OFFICER1",
  "remainingCriteriaNeeded": 0,
  "sanctionsPastYear": Array [],
  "specialConditionsAlcDrugAssessmentComplete": false,
  "specialConditionsAlcDrugScreen": false,
  "specialConditionsAlcDrugTreatment": false,
  "specialConditionsAlcDrugTreatmentCurrent": false,
  "specialConditionsCommunityService": false,
  "specialConditionsCommunityServiceCurrent": false,
  "specialConditionsCounseling": false,
  "specialConditionsCounselingAngerManagementCurrent": false,
  "specialConditionsFlag": undefined,
  "specialConditionsProgramming": false,
  "specialConditionsProgrammingCognitiveBehavior": false,
  "specialConditionsProgrammingCognitiveBehaviorCurrent": false,
  "specialConditionsProgrammingFsw": false,
  "specialConditionsProgrammingFswCurrent": false,
  "specialConditionsProgrammingSafe": false,
  "specialConditionsProgrammingSafeCurrent": false,
  "specialConditionsProgrammingVictimImpact": false,
  "specialConditionsProgrammingVictimImpactCurrent": false,
  "specialConditionsTerminatedDate": undefined,
  "stateCode": "US_TN",
  "supervisionFeeArrearaged": false,
  "supervisionType": "TN PROBATIONER",
  "tdocId": "202",
  "zeroToleranceCodes": Array [],
}
`;

exports[`transform record, old format 1`] = `
Object {
  "caseNotes": Object {},
  "clientFirstName": "LINDA",
  "clientLastName": "SMITH",
  "courtCostsPaid": false,
  "currentOffenses": Array [
    "FAILURE TO APPEAR (FELONY)",
  ],
  "dateToday": "2022-03-25",
  "drugScreensPastYear": Array [],
  "eligibilityCategory": "c3",
  "eligibleCriteria": Object {
    "usTnFinesFeesEligible": Object {
      "hasFinesFeesBalanceBelow500": Object {
        "amountOwed": 0,
      },
      "hasPayments3ConsecutiveMonths": Object {
        "amountOwed": 0,
        "consecutiveMonthlyPayments": 0,
      },
      "hasPermanentFinesFeesExemption": Object {
        "currentExemptions": Array [
          "SSDB",
          "SSDB",
        ],
      },
    },
  },
  "eligibleLevelStart": undefined,
  "externalId": "202",
  "formInformation": Object {
    "sentenceStartDate": 2020-03-07T00:00:00.000Z,
  },
  "ineligibleCriteria": Object {},
  "judicialDistrict": "Unknown",
  "lastSpecialConditionsNote": undefined,
  "lifetimeOffensesExpired": Array [],
  "metadata": Object {},
  "mostRecentArrestCheck": 2023-04-01T00:00:00.000Z,
  "nextSpecialConditionsCheck": undefined,
  "offenseTypeEligibility": undefined,
  "pastOffenses": undefined,
  "poFirstName": "TEST",
  "poLastName": "OFFICER1",
  "remainingCriteriaNeeded": 0,
  "sanctionsPastYear": Array [],
  "specialConditionsAlcDrugAssessmentComplete": false,
  "specialConditionsAlcDrugScreen": false,
  "specialConditionsAlcDrugTreatment": false,
  "specialConditionsAlcDrugTreatmentCurrent": false,
  "specialConditionsCommunityService": false,
  "specialConditionsCommunityServiceCurrent": false,
  "specialConditionsCounseling": false,
  "specialConditionsCounselingAngerManagementCurrent": false,
  "specialConditionsFlag": undefined,
  "specialConditionsProgramming": false,
  "specialConditionsProgrammingCognitiveBehavior": false,
  "specialConditionsProgrammingCognitiveBehaviorCurrent": false,
  "specialConditionsProgrammingFsw": false,
  "specialConditionsProgrammingFswCurrent": false,
  "specialConditionsProgrammingSafe": false,
  "specialConditionsProgrammingSafeCurrent": false,
  "specialConditionsProgrammingVictimImpact": false,
  "specialConditionsProgrammingVictimImpactCurrent": false,
  "specialConditionsTerminatedDate": undefined,
  "stateCode": "US_TN",
  "supervisionFeeArrearaged": false,
  "supervisionType": "TN PROBATIONER",
  "tdocId": "202",
  "zeroToleranceCodes": Array [],
}
`;
